# oups

./: .buildinfo  .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  api.html  genindex.html  index.html  indexing.html  install.html  objects.inv  parquetset.html  purpose.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  store.html  tutorial.html
.doctrees/: api.doctree  environment.pickle  index.doctree  indexing.doctree  install.doctree  parquetset.doctree  purpose.doctree  quickstart.doctree  store.doctree  tutorial.doctree
.github/workflows/: blank.yml  docs.yml  main.yml
None/: _common_metadata  part.0.parquet  part.1.parquet  part.2.parquet  part.3.parquet  part.4.parquet
_sources/: api.rst.txt  index.rst.txt  indexing.rst.txt  install.rst.txt  parquetset.rst.txt  purpose.rst.txt  quickstart.rst.txt  store.rst.txt  tutorial.rst.txt
docs/source/: api.rst  conf.py  index.rst  indexing.rst  install.rst  parquetset.rst  purpose.rst  quickstart.rst  store.rst
oups/: __init__.py  binners.py  chainagg.py  chaingroupby.py  collection.py  cumsegagg.py  date_utils.py  defines.py  indexer.py  jcumsegagg.py  numpy_utils.py  reader.py  router.py  segmentby.py  streamagg.py  utils.py  writer.py
oups/aggstream/: __init__.py  aggstream.py  cumsegagg.py  jcumsegagg.py  segmentby.py  utils.py
oups/pipeline/: IMPLEMENTATION_ROADMAP.md  memory_pipeline_poc.py  pipeline_poc.py  pipeline_poc_enhanced.py
oups/store/: __init__.py  atomic_merge_regions.py  collection.py  data_overlap.py  defines.py  filepath_utils.py  indexer.py  iter_data.py  iter_dataframe.py  ordered_atomic_regions.py  ordered_merge_info.py  ordered_parquet_dataset.py  router.py  split_strategies.py  store.py  utils.py  writer.py
oups/streamagg/: __init__.py  cumsegagg.py  segmentby.py  streamagg.py
tests/: __init__.py  test_atomic_merge_regions.py  test_binners.py  test_chainagg_multi.py  test_chainagg_simple.py  test_chaingroupby.py  test_collection.py  test_cumsegagg.py  test_cumsegagg_restart.py  test_date_utils.py  test_indexer.py  test_jcumsegagg.py  test_metadata.py  test_numpy_utils.py  test_router.py  test_segmentby.py  test_segmentby_restart.py  test_streamagg.py  test_streamagg2.py  test_streamagg_multi.py  test_streamagg_simple.py  test_utils.py  test_writer.py
tests/test_aggstream/: __init__.py  test_aggstream_advanced.py  test_aggstream_init.py  test_aggstream_simple.py  test_cumsegagg.py  test_cumsegagg_restart.py  test_jcumsegagg.py  test_segmentby.py  test_segmentby_restart.py
tests/test_store/: conftest.py  test_atomic_merge_regions.py  (+13 more)
(+65 files in other folders)
