[tool.poetry]
name = "oups"
version = "0.1.1"
description = "Collection of parquet datasets."
authors = ["Yohplala"]
license = "Apache-2.0"
repository = "https://github.com/yohplala/oups"

[tool.poetry.dependencies]
python = ">=3.10"
sortedcontainers = ">=2.4.0"
pandas = ">=2.2.3"
fastparquet = ">=2023.10.1"
arro3-core = ">=0.4.6"
arro3-io = ">=0.4.6"
numpy = ">=2.0"
joblib = ">=1.3.2"
cloudpickle = ">=3.1.1"
numba = ">=0.61.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[build-system]
requires = [
    "setuptools",
    "poetry-core>=1.0.7"
]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
