[tool.poetry]
name = "oups"
version = "0.1.1"
description = "Collection of parquet datasets."
authors = ["Yohplala"]
license = "Apache-2.0"
repository = "https://github.com/yohplala/oups"

[tool.poetry.dependencies]
python = ">=3.10"
sortedcontainers = ">=2.4.0"
pandas = ">=2.2.3"
fastparquet = ">=2023.10.1"
arro3-core = ">=0.4.6"
arro3-io = ">=0.4.6"
numpy = ">=2.0"
joblib = ">=1.3.2"
cloudpickle = ">=3.1.1"
numba = ">=0.61.2"
flufl-lock = ">=8.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1"
pre-commit = ">=4.2.0"
pytest = ">=8.3.5"
commitizen = ">=4.8.0"

[build-system]
requires = [
    "setuptools",
    "poetry-core>=2.1.3"
]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Commitizen configuration using Poetry version provider
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
tag_format = "$version"
update_changelog_on_bump = true
annotated_tag = true
changelog_incremental = true
