[tool.poetry]
name = "oups"
version = "2025.06.4"
description = "Collection of parquet datasets."
authors = ["Yohplala"]
license = "Apache-2.0"
repository = "https://github.com/yohplala/oups"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sortedcontainers = ">=2.4.0"
pandas = ">=2.2.3"
fastparquet = ">=2023.10.1"
arro3-core = ">=0.4.6"
arro3-io = ">=0.4.6"
numpy = ">=2.0"
joblib = ">=1.3.2"
cloudpickle = ">=3.1.1"
numba = ">=0.61.2"
flufl-lock = ">=8.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1"
pre-commit = ">=4.2.0"
pytest = ">=8.3.5"
sphinx = ">=7.2.6"
sphinx-rtd-theme = ">=3.0.0"
numpydoc = ">=1.8.0"

[build-system]
requires = [
    "setuptools",
    "poetry-core>=2.1.3"
]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
